crates/analyzer/tests/snapshots/errors__call_to_pure_fn_on_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: function `pure` cannot be called on `Foo`
  ┌─ compile_errors/call_to_pure_fn_on_self.fe:5:14
  │
5 │         self.pure()
  │              ^^^^ this is an associated function
  │
  = Suggestion: try `pure(...)` instead


